2007-02-07 07:28:44  Sean Middleditch <elanthis@awesomeplay.com>

  * Calendar file format now uses TabReader format instead of
    FileObject.
  * Updated FileObject format require a namespace and name for
    every attribute.
  * New easier to read and write help file format.  Along with
    its own crappy poorly written parser.
  * Fixed default help command to show help topic 'general' if
    not topic is specified.

2007-02-05 06:18:03  Sean Middleditch <elanthis@awesomeplay.com>

  * Build fixes; no clue how I got things to build and run before.
    Yay C++.

2007-02-04 07:59:59  Sean Middleditch <elanthis@awesomeplay.com>

  * Scriptix initialization no longer uses the static TypeDef
    structures, but instead relies on the type and method
    registration functions called from initializations routines.
  * Fixed bug in Player saving of traits which caused invalid
    player files to be written.

2007-02-03 09:38:02  Sean Middleditch <elanthis@awesomeplay.com>

  * Object blueprints cannot be inherited.  Too many problems,
    too much complexity, and the only really useful inheritables
    were events and blueprint IDs.  The later are replacable with
    blueprint tags, and the former
  * Split Object class into ShadowObject and UniqueObject.
    The former is the type that inherits a blueprint, and the
    later does not inherit a blueprint.
  * Upgraded fileobj syntax to support an attribute/object mix,
    in the form class.name = type { ... }.
  * Revamped the Entity save/load interface to rely on new
    attribute/object fileobj format and on EFactory.
  * Updated EFactory to actually be usable.
  * Updated the various entity sub-class save/load routines to
    use the above changes.
  * This now allows for us to save and load both object types
    without needing huge gobs of ugly code.

2007-02-01 07:55:33  Sean Middleditch <elanthis@awesomeplay.com>

  * Object blueprints cannot be inherited.  Too many problems,