@@ -329,111 +329,6 @@ Scriptix::Compiler::Compiler::CompileNode (CompilerFunction* func, CompilerNode 
 				func->func->add_opcode(OP_NEWARRAY);
 				func->func->add_oparg(_sxp_count(node->parts.nodes[0]));
 				break;
-			// increment a normal variable, push result
-			case SXP_PREOP:
-				// normal variable/name
-				if (node->parts.nodes[0]->type == SXP_LOOKUP) {
-					long index;
-					// do variable lookup
-					index = get_var(func, node->parts.nodes[0]->parts.name);
-					if (index < 0) {
-						_sxp_node_error (node, "Error: Undefined variable '%s'", node->parts.name.name().c_str());
-						return false;
-					}
-
-					// lookup, copy, do op, re-assign
-					func->func->add_opcode(OP_LOOKUP);
-					func->func->add_oparg(index);
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_ASSIGN);
-					func->func->add_oparg(index);
-				// list lookup
-				} else if (node->parts.nodes[0]->type == SXP_GETINDEX) {
-					// setup, copy, get value, do op, re-assign
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[0]))
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[1]))
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(2);
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(2);
-					func->func->add_opcode(OP_INDEX);
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_SETINDEX);
-				// property lookup
-				} else if (node->parts.nodes[0]->type == SXP_GETPROPERTY) {
-					// get, copy, lookup, do op, re-assign
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[0]))
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(1);
-					func->func->add_opcode(OP_GET_PROPERTY);
-					func->func->add_oparg(node->parts.nodes[0]->parts.name.value());
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_SET_PROPERTY);
-					func->func->add_oparg(node->parts.nodes[0]->parts.name.value());
-				// not an lvalue!
-				} else {
-					_sxp_node_error (node, "Error: Expression is not an lvalue");
-					return false;
-				}
-				break;
-			// push a normal variable, then increment its value
-			case SXP_POSTOP:
-			{
-				// normal variable/name
-				if (node->parts.nodes[0]->type == SXP_LOOKUP) {
-					long index;
-					// do variable lookup
-					index = get_var(func, node->parts.nodes[0]->parts.name);
-					if (index < 0) {
-						_sxp_node_error (node, "Error: Undefined variable '%s'", node->parts.name.name().c_str());
-						return false;
-					}
-
-					// lookup, copy, do op, re-assign
-					func->func->add_opcode(OP_LOOKUP);
-					func->func->add_oparg(index);
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(1);
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_ASSIGN);
-					func->func->add_oparg(index);
-					func->func->add_opcode(OP_POP);
-				// list lookup
-				} else if (node->parts.nodes[0]->type == SXP_GETINDEX) {
-					// setup, copy, get value, do op, re-assign
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[0]))
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[1]))
-					func->func->add_opcode(OP_INDEX);
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(1);
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_SETINDEX);
-					func->func->add_opcode(OP_POP);
-				// property lookup
-				} else if (node->parts.nodes[0]->type == SXP_GETPROPERTY) {
-					// get, copy, lookup, do op, re-assign
-					_test(CompileNode (func, node->parts.nodes[0]->parts.nodes[0]))
-					func->func->add_opcode(OP_GET_PROPERTY);
-					func->func->add_oparg(node->parts.nodes[0]->parts.name.value());
-					func->func->add_opcode(OP_COPY);
-					func->func->add_oparg(1);
-					_test(CompileNode (func, node->parts.nodes[1]))
-					func->func->add_opcode((sx_op_type)node->parts.op);
-					func->func->add_opcode(OP_SET_PROPERTY);
-					func->func->add_oparg(node->parts.nodes[0]->parts.name.value());
-					func->func->add_opcode(OP_POP);
-				// not an lvalue!
-				} else {
-					_sxp_node_error (node, "Error: Expression is not an lvalue");
-					return false;
-				}
-				break;
-			}
 			// return from the current call stack
 			case SXP_RETURN:
 				if (node->parts.nodes[0] != NULL)
