@@ -1,3 +1,11 @@
+2007-02-07 07:53:16  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Removed support for postop and preop syntax in Scriptix.
+    That's the --, ++, +=, *=, etc. operators.  This cut out over a
+    hundred lines from the compiler and removed all of our remaining
+    Bison grammar errors.  The performance and expressiveness loss
+    we pay is completely negligable.
+
 2007-02-07 07:28:44  Sean Middleditch <elanthis@awesomeplay.com>
 
   * Calendar file format now uses TabReader format instead of
